--- a/app/assets/stylesheets/rails_blog/application/application.css.scss
+++ b/app/assets/stylesheets/rails_blog/application/application.css.scss
@@ -44,3 +44,35 @@ input[type="submit"].btn-large {
   max-width: 200px;
   max-height: 100px;
 }
+
+.field_with_errors {
+  padding: 0px !important;
+  background: none !important;
+  display: block !important;
+}
+
+.control-group span.error {
+  color: #B94A48;
+  font-size: 11px;
+  font-weight: 600;
+  position: relative;
+  top: 5px;
+  padding: 4px 8px;
+  margin-bottom: 1em;
+  color: #FFF;
+  background: #B94A48;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.35);
+}
+.control-group span.error::after {
+  content: '';
+  display: inline-block;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid #B94A48;
+  position: absolute;
+  top: -6px;
+  left: 7px;
+}
