Allowing users to change their password.

--- a/app/views/rails_blog/profile/index.html.haml
+++ b/app/views/rails_blog/profile/index.html.haml
@@ -14,5 +14,26 @@
           = f.text_field :name, :class => "input-xxlarge"
           = render_errors(@user, :name)
 
+    .control-group
+      .control-label
+        = f.label :email
+        .controls
+          = f.email_field :email, :class => "input-xxlarge"
+          = render_errors(@user, :email)
+
+    .control-group
+      .control-label
+        = f.label :current_password
+        .controls
+          = f.password_field :current_password, :class => "input-xlarge"
+          = render_errors(@user, :current_password)
+
+    .control-group
+      .control-label
+        = f.label :password
+        .controls
+          = f.password_field :password, :class => "input-xlarge"
+          = render_errors(@user, :password)
+
     .actions
       = f.submit "Save changes", :class => "btn btn-inverse btn-large"
