--- a/app/views/layouts/rails_blog/application/header/_menu.html.haml
+++ b/app/views/layouts/rails_blog/application/header/_menu.html.haml
@@ -6,7 +6,7 @@
     %span.menu-item
       = link_to 'New post', new_post_path
     %span.menu-item
-      = link_to current_user.email, profile_path
+      = link_to current_user.email, edit_user_registration_path
     %span.menu-item
       = link_to 'Sign out', destroy_user_session_path, :method => :delete
   - else
