--- a/app/views/rails_blog/posts/show.html.haml
+++ b/app/views/rails_blog/posts/show.html.haml
@@ -10,3 +10,5 @@
     = link_to "Edit post", edit_post_path(@post), :class => "btn btn-inverse btn-large"
     = link_to "Publish post", custom_post_path(*@post.url_params, state: "unpublish"), :class => "btn btn-inverse btn-large"
     = link_to "Remove post", post_path(@post), :class => "btn btn-danger btn-large", method: :delete, :confirm => 'Are you sure?'
+
+= render :partial => 'comments', locals: { post: @post }
