--- a/app/views/rails_blog/posts/show.html.haml
+++ b/app/views/rails_blog/posts/show.html.haml
@@ -1,14 +1,10 @@
 = render @post
 
-- if @post.published?
-  .row-fluid
-    .social-networks.pull-right
-      = social_share_button_tag(@post.title)
-
 - if @post.drafted? && @post.author == current_user
   .actions
     = link_to "Edit post", edit_post_path(@post), :class => "btn btn-inverse btn-large"
     = link_to "Publish post", custom_post_path(*@post.url_params, state: "unpublish"), :class => "btn btn-inverse btn-large"
     = link_to "Remove post", post_path(@post), :class => "btn btn-danger btn-large", method: :delete, :confirm => 'Are you sure?'
 
+= render :partial => 'sharing', locals: { post: @post }
 = render :partial => 'comments', locals: { post: @post }
